Fixed a footer CSS issue (vertical align)

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -25,7 +25,7 @@
 }
 
 .footer p {
-  margin: 10px 0;
+  margin: auto 0;
   text-align: center;
 }
 
